Fixed edit screen instruction alignment and spacing

--- a/rsc/less/blog_base.less
+++ b/rsc/less/blog_base.less
@@ -451,6 +451,11 @@ div.results {
 	overflow: auto;
 }
 
+// Styles for edit-screen instructions
+.evo_instruction {
+	margin: 20px 10px;
+}
+
 // Styles for in-skin editing
 form.inskin{
 	padding: 10px;
