--- a/rsc/less/bootstrap-blog_base.less
+++ b/rsc/less/bootstrap-blog_base.less
@@ -381,6 +381,11 @@ div.results {
 	}
 }
 
+// Styles for edit-screen instructions
+.evo_instruction {
+	margin: 20px 10px 10px;
+}
+
 // Styles for in-skin editing
 form.inskin{
 	padding: 10px;
